fixed dashboard overflow on the bottom of the page and in the events container

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,6 +1,7 @@
 .dashboard-page-container {
   background-color: #1F2022;
-  height: 100%;
+  padding-bottom: 64px;
+  // height: 100%;
 
   .dashboard-tasks-container {
     height: 400px;
@@ -33,6 +34,7 @@
     background-color: #2A2B2D;
     overflow: hidden;
 
+
     .dashboard-events-headers {
       display: flex;
       justify-content: space-between;
@@ -46,7 +48,7 @@
 
     .dashboard-events-inner-container {
       // height: 100%;
-      height: 720px;
+      height: 680px;
       overflow: auto;
     }
   }
